better ingredient view
